k8s-manifests/pod-with-owner-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-owner-label
  namespace: test-ns
  labels:
    app: busybox1
    owner: test 
spec:
  containers:
  - image: busybox
    command:
      - sleep
      - "36000"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
