k8s-manifests/webhook-deployment-service.yaml
---
## should already be created in the previous steps
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-demo
  annotations:
    # this annotation is used by the webhook to determine if it should be called
    # when creating resources in this namespace
    'example.com/validate': "false"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-server
  namespace: webhook-demo
  labels:
    app: webhook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: webhook-server
          image: webhook-server:1.5
          imagePullPolicy: Never # this forces k8s to use local image that we loaded via kind
          ports:
            - containerPort: 3000
              name: webhook-api
          volumeMounts:
          - mountPath: "/source"
            name: webhook-certs
            readOnly: true
      serviceAccount: webhook-demo-sa
      volumes:
        - name: webhook-certs
          secret:
            secretName: webhook-certs
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
  namespace: webhook-demo
spec:
  selector:
    app: webhook-server
  ports:
    - port: 443
      targetPort: webhook-api
