k8s-manifests/ValidatingWebhookConfiguration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "webhook-server.webhook-demo.svc"
webhooks:
  - name: "webhook-server.webhook-demo.svc"
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "webhook-demo"
        name: "webhook-server"
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGVENDQWYyZ0F3SUJBZ0lVSzRwUGxOV0hYaERnOEJBaFBkNFdweWRYUHFNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dqRVlNQllHQTFVRUF3d1BWMlZpYUc5dmF5QkVaVzF2SUVOQk1CNFhEVEkxTURVd09ERTBNalUwTVZvWApEVEkxTURZd056RTBNalUwTVZvd0dqRVlNQllHQTFVRUF3d1BWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOCkJna3Foa2lHOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTRrNDFYZERpTzZiTlVuc2YyTkQ4RW0zMkc5S2UKeVJ3M2JCYldwOUhpUGw2dVdTTm1yU01GTzhSVlpVQVZKY05nYVNzTUVMcGNSTmpSR3BpRytsd0daY3g0SFhrSwpSYVE5MDZEWUN [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
